Fixed Empty Toastr Message and added bottom padding for content-wrapper to fix Layout Issue

--- a/Client/src/app/layouts/app-layout.component.css
+++ b/Client/src/app/layouts/app-layout.component.css
@@ -1,3 +1,4 @@
  .content-wrapper {
      min-height: 90vh;
+     padding-bottom: 40px;
  }
